# fast_spi

./: Cargo.toml
.cargo/: config
src/: main.rs
