[package]
name = "fast_spi"
version = "0.1.0"
authors = ["disasm"]
edition = "2018"
license = "ISC"
readme = "README.md"

[dependencies]
hifive1 = { version = "0.8.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv-rt = "0.6.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
